ThreeAdress_parser/ThreeAddressCodeParser.py
# Generated from ThreeAdress_parser/ThreeAddressCode.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ThreeAddressCodeParser ( Parser ):

    grammarFileName = "ThreeAddressCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "<INVALID>", "'<-'", "'='", 
                     "'~'", "'<'", "'<='", "'=='", "'.'", "'Return'", "'BeginFunc 0'", 
                     "'EndFunc'", "'Ifz'", "'Goto'", "'PushParam'", "'PopParams'", 
                     "'FCall'", "<INVALID>", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "NUMBER", "ASSIGN", "EQUAL", 
                      "NEGATE", "LT", "LT_EQUAL", "COMPARE", "DOT", "RETURN", 
                      "BEGIN_FUNC", "END_FUNC", "IFZ", "GOTO", "PUSH_PARAM", 
                      "POP_PARAMS", "FCALL", "OP", "SEMI", "COLON", "LABEL", 
                      "IDENTIFIER", "WHITESPACE" ]

    RULE_program = 0
    RULE_classDeclaration = 1
    RULE_globalVarDeclaration = 2
    RULE_methodDeclaration = 3
    RULE_instruction = 4
    RULE_fCallStatement = 5
    RULE_expression = 6

    ruleNames =  [ "program", "classDeclaration", "globalVarDeclaration", 
                   "methodDeclaration", "instruction", "fCallStatement", 
                   "expression" ]

    EOF = Token.EOF
    CLASS=1
    NUMBER=2
    ASSIGN=3
    EQUAL=4
    NEGATE=5
    LT=6
    LT_EQUAL=7
    COMPARE=8
    DOT=9
    RETURN=10
    BEGIN_FUNC=11
    END_FUNC=12
    IFZ=13
    GOTO=14
    PUSH_PARAM=15
    POP_PARAMS=16
    FCALL=17
    OP=18
    SEMI=19
    COLON=20
    LABEL=21
    IDENTIFIER=22
    WHITESPACE=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThreeAddressCodeParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(ThreeAddressCodeParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return ThreeAddressCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ThreeAddressCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.classDeclaration()
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(ThreeAddressCodeParser.CLASS, 0)

        def IDENTIFIER(self):
            return self.getToken(ThreeAddressCodeParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(ThreeAddressCodeParser.COLON, 0)

        def globalVarDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThreeAddressCodeParser.GlobalVarDeclarationContext)
            else:
                return self.getTypedRuleContext(ThreeAddressCodeParser.GlobalVarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThreeAddressCodeParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(ThreeAddressCodeParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return ThreeAddressCodeParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = ThreeAddressCodeParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(ThreeAddressCodeParser.CLASS)
            self.state = 20
            self.match(ThreeAddressCodeParser.IDENTIFIER)
            self.state = 21
            self.match(ThreeAddressCodeParser.COLON)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 24
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 22
                    self.globalVarDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 23
                    self.methodDeclaration()
                    pass


                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalVarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ThreeAddressCodeParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(ThreeAddressCodeParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ThreeAddressCodeParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def getRuleIndex(self):
            return ThreeAddressCodeParser.RULE_globalVarDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalVarDeclaration" ):
                listener.enterGlobalVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalVarDeclaration" ):
                listener.exitGlobalVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalVarDeclaration" ):
                return visitor.visitGlobalVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def globalVarDeclaration(self):

        localctx = ThreeAddressCodeParser.GlobalVarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_globalVarDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(ThreeAddressCodeParser.IDENTIFIER)
            self.state = 30
            self.match(ThreeAddressCodeParser.ASSIGN)
            self.state = 31
            self.expression()
            self.state = 32
            self.match(ThreeAddressCodeParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ThreeAddressCodeParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(ThreeAddressCodeParser.COLON, 0)

        def BEGIN_FUNC(self):
            return self.getToken(ThreeAddressCodeParser.BEGIN_FUNC, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ThreeAddressCodeParser.SEMI)
            else:
                return self.getToken(ThreeAddressCodeParser.SEMI, i)

        def END_FUNC(self):
            return self.getToken(ThreeAddressCodeParser.END_FUNC, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThreeAddressCodeParser.InstructionContext)
            else:
                return self.getTypedRuleContext(ThreeAddressCodeParser.InstructionContext,i)


        def getRuleIndex(self):
            return ThreeAddressCodeParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = ThreeAddressCodeParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(ThreeAddressCodeParser.IDENTIFIER)
            self.state = 35
            self.match(ThreeAddressCodeParser.COLON)
            self.state = 36
            self.match(ThreeAddressCodeParser.BEGIN_FUNC)
            self.state = 37
            self.match(ThreeAddressCodeParser.SEMI)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6546432) != 0):
                self.state = 38
                self.instruction()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(ThreeAddressCodeParser.END_FUNC)
            self.state = 45
            self.match(ThreeAddressCodeParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ThreeAddressCodeParser.RULE_instruction

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EqualInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ThreeAddressCodeParser.IDENTIFIER, 0)
        def EQUAL(self):
            return self.getToken(ThreeAddressCodeParser.EQUAL, 0)
        def expression(self):
            return self.getTypedRuleContext(ThreeAddressCodeParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualInstr" ):
                listener.enterEqualInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualInstr" ):
                listener.exitEqualInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualInstr" ):
                return visitor.visitEqualInstr(self)
            else:
                return visitor.visitChildren(self)


    class AssignInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ThreeAddressCodeParser.IDENTIFIER, 0)
        def ASSIGN(self):
            return self.getToken(ThreeAddressCodeParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(ThreeAddressCodeParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignInstr" ):
                listener.enterAssignInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignInstr" ):
                listener.exitAssignInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignInstr" ):
                return visitor.visitAssignInstr(self)
            else:
                return visitor.visitChildren(self)


    class PopParamInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def POP_PARAMS(self):
            return self.getToken(ThreeAddressCodeParser.POP_PARAMS, 0)
        def NUMBER(self):
            return self.getToken(ThreeAddressCodeParser.NUMBER, 0)
        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPopParamInstr" ):
                listener.enterPopParamInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPopParamInstr" ):
                listener.exitPopParamInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPopParamInstr" ):
                return visitor.visitPopParamInstr(self)
            else:
                return visitor.visitChildren(self)


    class PushParamInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PUSH_PARAM(self):
            return self.getToken(ThreeAddressCodeParser.PUSH_PARAM, 0)
        def IDENTIFIER(self):
            return self.getToken(ThreeAddressCodeParser.IDENTIFIER, 0)
        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPushParamInstr" ):
                listener.enterPushParamInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPushParamInstr" ):
                listener.exitPushParamInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPushParamInstr" ):
                return visitor.visitPushParamInstr(self)
            else:
                return visitor.visitChildren(self)


    class NegateInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ThreeAddressCodeParser.IDENTIFIER, 0)
        def NEGATE(self):
            return self.getToken(ThreeAddressCodeParser.NEGATE, 0)
        def expression(self):
            return self.getTypedRuleContext(ThreeAddressCodeParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegateInstr" ):
                listener.enterNegateInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegateInstr" ):
                listener.exitNegateInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegateInstr" ):
                return visitor.visitNegateInstr(self)
            else:
                return visitor.visitChildren(self)


    class GotoInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def GOTO(self):
            return self.getToken(ThreeAddressCodeParser.GOTO, 0)
        def LABEL(self):
            return self.getToken(ThreeAddressCodeParser.LABEL, 0)
        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGotoInstr" ):
                listener.enterGotoInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGotoInstr" ):
                listener.exitGotoInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGotoInstr" ):
                return visitor.visitGotoInstr(self)
            else:
                return visitor.visitChildren(self)


    class IfInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IFZ(self):
            return self.getToken(ThreeAddressCodeParser.IFZ, 0)
        def IDENTIFIER(self):
            return self.getToken(ThreeAddressCodeParser.IDENTIFIER, 0)
        def GOTO(self):
            return self.getToken(ThreeAddressCodeParser.GOTO, 0)
        def LABEL(self):
            return self.getToken(ThreeAddressCodeParser.LABEL, 0)
        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfInstr" ):
                listener.enterIfInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfInstr" ):
                listener.exitIfInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfInstr" ):
                return visitor.visitIfInstr(self)
            else:
                return visitor.visitChildren(self)


    class FCallInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def fCallStatement(self):
            return self.getTypedRuleContext(ThreeAddressCodeParser.FCallStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFCallInstr" ):
                listener.enterFCallInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFCallInstr" ):
                listener.exitFCallInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFCallInstr" ):
                return visitor.visitFCallInstr(self)
            else:
                return visitor.visitChildren(self)


    class ReturnInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(ThreeAddressCodeParser.RETURN, 0)
        def expression(self):
            return self.getTypedRuleContext(ThreeAddressCodeParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnInstr" ):
                listener.enterReturnInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnInstr" ):
                listener.exitReturnInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnInstr" ):
                return visitor.visitReturnInstr(self)
            else:
                return visitor.visitChildren(self)


    class LabelInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(ThreeAddressCodeParser.LABEL, 0)
        def COLON(self):
            return self.getToken(ThreeAddressCodeParser.COLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelInstr" ):
                listener.enterLabelInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelInstr" ):
                listener.exitLabelInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelInstr" ):
                return visitor.visitLabelInstr(self)
            else:
                return visitor.visitChildren(self)


    class LtInstrContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThreeAddressCodeParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(ThreeAddressCodeParser.IDENTIFIER, 0)
        def LT(self):
            return self.getToken(ThreeAddressCodeParser.LT, 0)
        def expression(self):
            return self.getTypedRuleContext(ThreeAddressCodeParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLtInstr" ):
                listener.enterLtInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLtInstr" ):
                listener.exitLtInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLtInstr" ):
                return visitor.visitLtInstr(self)
            else:
                return visitor.visitChildren(self)



    def instruction(self):

        localctx = ThreeAddressCodeParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instruction)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = ThreeAddressCodeParser.ReturnInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.match(ThreeAddressCodeParser.RETURN)
                self.state = 48
                self.expression()
                self.state = 49
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 2:
                localctx = ThreeAddressCodeParser.AssignInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.match(ThreeAddressCodeParser.IDENTIFIER)
                self.state = 52
                self.match(ThreeAddressCodeParser.ASSIGN)
                self.state = 53
                self.expression()
                self.state = 54
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 3:
                localctx = ThreeAddressCodeParser.EqualInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.match(ThreeAddressCodeParser.IDENTIFIER)
                self.state = 57
                self.match(ThreeAddressCodeParser.EQUAL)
                self.state = 58
                self.expression()
                self.state = 59
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 4:
                localctx = ThreeAddressCodeParser.NegateInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.match(ThreeAddressCodeParser.IDENTIFIER)
                self.state = 62
                self.match(ThreeAddressCodeParser.NEGATE)
                self.state = 63
                self.expression()
                self.state = 64
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 5:
                localctx = ThreeAddressCodeParser.LtInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.match(ThreeAddressCodeParser.IDENTIFIER)
                self.state = 67
                self.match(ThreeAddressCodeParser.LT)
                self.state = 68
                self.expression()
                self.state = 69
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 6:
                localctx = ThreeAddressCodeParser.IfInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 71
                self.match(ThreeAddressCodeParser.IFZ)
                self.state = 72
                self.match(ThreeAddressCodeParser.IDENTIFIER)
                self.state = 73
                self.match(ThreeAddressCodeParser.GOTO)
                self.state = 74
                self.match(ThreeAddressCodeParser.LABEL)
                self.state = 75
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 7:
                localctx = ThreeAddressCodeParser.GotoInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.match(ThreeAddressCodeParser.GOTO)
                self.state = 77
                self.match(ThreeAddressCodeParser.LABEL)
                self.state = 78
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 8:
                localctx = ThreeAddressCodeParser.PushParamInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 79
                self.match(ThreeAddressCodeParser.PUSH_PARAM)
                self.state = 80
                self.match(ThreeAddressCodeParser.IDENTIFIER)
                self.state = 81
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 9:
                localctx = ThreeAddressCodeParser.PopParamInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 82
                self.match(ThreeAddressCodeParser.POP_PARAMS)
                self.state = 83
                self.match(ThreeAddressCodeParser.NUMBER)
                self.state = 84
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 10:
                localctx = ThreeAddressCodeParser.FCallInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 85
                self.fCallStatement()
                pass

            elif la_ == 11:
                localctx = ThreeAddressCodeParser.LabelInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 86
                self.match(ThreeAddressCodeParser.LABEL)
                self.state = 87
                self.match(ThreeAddressCodeParser.COLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FCallStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FCALL(self):
            return self.getToken(ThreeAddressCodeParser.FCALL, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ThreeAddressCodeParser.IDENTIFIER)
            else:
                return self.getToken(ThreeAddressCodeParser.IDENTIFIER, i)

        def DOT(self):
            return self.getToken(ThreeAddressCodeParser.DOT, 0)

        def SEMI(self):
            return self.getToken(ThreeAddressCodeParser.SEMI, 0)

        def getRuleIndex(self):
            return ThreeAddressCodeParser.RULE_fCallStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFCallStatement" ):
                listener.enterFCallStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFCallStatement" ):
                listener.exitFCallStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFCallStatement" ):
                return visitor.visitFCallStatement(self)
            else:
                return visitor.visitChildren(self)




    def fCallStatement(self):

        localctx = ThreeAddressCodeParser.FCallStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fCallStatement)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(ThreeAddressCodeParser.FCALL)
                self.state = 91
                self.match(ThreeAddressCodeParser.IDENTIFIER)
                self.state = 92
                self.match(ThreeAddressCodeParser.DOT)
                self.state = 93
                self.match(ThreeAddressCodeParser.IDENTIFIER)
                self.state = 94
                self.match(ThreeAddressCodeParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(ThreeAddressCodeParser.FCALL)
                self.state = 96
                self.match(ThreeAddressCodeParser.IDENTIFIER)
                self.state = 97
                self.match(ThreeAddressCodeParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ThreeAddressCodeParser.IDENTIFIER)
            else:
                return self.getToken(ThreeAddressCodeParser.IDENTIFIER, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(ThreeAddressCodeParser.NUMBER)
            else:
                return self.getToken(ThreeAddressCodeParser.NUMBER, i)

        def LABEL(self):
            return self.getToken(ThreeAddressCodeParser.LABEL, 0)

        def OP(self):
            return self.getToken(ThreeAddressCodeParser.OP, 0)

        def NEGATE(self):
            return self.getToken(ThreeAddressCodeParser.NEGATE, 0)

        def LT(self):
            return self.getToken(ThreeAddressCodeParser.LT, 0)

        def LT_EQUAL(self):
            return self.getToken(ThreeAddressCodeParser.LT_EQUAL, 0)

        def COMPARE(self):
            return self.getToken(ThreeAddressCodeParser.COMPARE, 0)

        def getRuleIndex(self):
            return ThreeAddressCodeParser.RULE_expression
